Remove link at top of page when printing

--- a/src/assets/scss/print.scss
+++ b/src/assets/scss/print.scss
@@ -1,4 +1,9 @@
 @media print {
+  @page {
+    size: auto;
+    margin: 0;
+  }
+
   body {
     -webkit-print-color-adjust: exact !important;
     -moz-print-color-adjust: exact !important;
