feat(cqcMainServiceApprovalAndRejectionButtons): Add approval/rejection popups to new cqc main service change page

--- a/src/app/features/admin/cqc-main-service-change/cqc-individual-main-service-change/cqc-individual-main-service-change.component.html
+++ b/src/app/features/admin/cqc-main-service-change/cqc-individual-main-service-change/cqc-individual-main-service-change.component.html
@@ -2,13 +2,6 @@
   <div class="govuk-grid-column-three-quarters">
     <h2 class="govuk-heading-l">CQC main service change: Dummy Establishment</h2>
     <p>Receveived some date</p>
-    <app-review-checkbox
-      [toggleCheckbox]=""
-      [registration]=""
-      [userFullName]=""
-      [checkBoxError]=""
-      [getUpdatedRegistration]=""
-    ></app-review-checkbox>
     <h2 class="govuk-heading-m">Workplace details</h2>
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
@@ -33,24 +26,20 @@
       </div>
     </dl>
 
-    <app-add-note
-      [addNote]=""
-      [registration]=""
-      [notes]=""
-      [getNotes]=""
-      [notesError]=""
-      [notesForm]=""
-      [loggedInUser]=""
-    ></app-add-note>
-
     <div class="govuk-frid-column-three-quarters">
       <div class="govuk-button-group">
-        <button class="govuk-button govuk-!-padding-left-6 govuk-!-padding-right-6">Approve</button>
+        <button
+          class="govuk-button govuk-!-padding-left-6 govuk-!-padding-right-6"
+          (click)="approveOrRejectCqcChange(true)"
+        >
+          Approve
+        </button>
         <button
           class="
             govuk-button govuk-button--warning
             govuk-!-padding-left-6 govuk-!-padding-right-6 govuk-!-margin-left-6
           "
+          (click)="approveOrRejectCqcChange(false)"
         >
           Reject
         </button>
