--- a/src/app/features/admin/cqc-main-service-change-list/cqc-main-service-change-list.component.html
+++ b/src/app/features/admin/cqc-main-service-change-list/cqc-main-service-change-list.component.html
@@ -11,6 +11,21 @@
           <th scope="col" class="govuk-table__header">Status</th>
         </tr>
       </thead>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row" *ngFor="let cqcServiceChange of pendingCQCMainServiceChanges">
+          <td class="govuk-table__cell">
+            <a [routerLink]="[cqcServiceChange.workplaceId]">{{ cqcServiceChange.orgName }}</a>
+          </td>
+          <td class="govuk-table__cell">
+            {{ cqcServiceChange.requested }}
+          </td>
+          <!-- <td class="govuk-table__cell">
+            <strong class="govuk-tag" [ngClass]="setStatusClass(cqcServiceChange.status)">
+              {{ cqcServiceChange.status | uppercase }}
+            </strong>
+          </td> -->
+        </tr>
+      </tbody>
     </table>
   </div>
 </div>
