create resolver for retrieving single cqc status change, create new backend endpoint and approvals modal hook

--- a/src/app/features/admin/cqc-main-service-change/cqc-individual-main-service-change/cqc-individual-main-service-change.component.html
+++ b/src/app/features/admin/cqc-main-service-change/cqc-individual-main-service-change/cqc-individual-main-service-change.component.html
@@ -2,13 +2,13 @@
   <div class="govuk-grid-column-three-quarters">
     <h2 class="govuk-heading-l">CQC main service change: Dummy Establishment</h2>
     <p>Receveived some date</p>
-    <app-review-checkbox
+    <!-- <app-review-checkbox
       [toggleCheckbox]=""
       [registration]=""
       [userFullName]=""
       [checkBoxError]=""
       [getUpdatedRegistration]=""
-    ></app-review-checkbox>
+    ></app-review-checkbox> -->
     <h2 class="govuk-heading-m">Workplace details</h2>
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
@@ -33,7 +33,7 @@
       </div>
     </dl>
 
-    <app-add-note
+    <!-- <app-add-note
       [addNote]=""
       [registration]=""
       [notes]=""
@@ -41,7 +41,7 @@
       [notesError]=""
       [notesForm]=""
       [loggedInUser]=""
-    ></app-add-note>
+    ></app-add-note> -->
 
     <div class="govuk-frid-column-three-quarters">
       <div class="govuk-button-group">
