Add Status for cqc main service change

--- a/src/app/features/admin/cqc-main-service-change-list/cqc-main-service-change-list.component.html
+++ b/src/app/features/admin/cqc-main-service-change-list/cqc-main-service-change-list.component.html
@@ -19,11 +19,11 @@
           <td class="govuk-table__cell">
             {{ cqcServiceChange.requested }}
           </td>
-          <!-- <td class="govuk-table__cell">
+          <td class="govuk-table__cell">
             <strong class="govuk-tag" [ngClass]="setStatusClass(cqcServiceChange.status)">
               {{ cqcServiceChange.status | uppercase }}
             </strong>
-          </td> -->
+          </td>
         </tr>
       </tbody>
     </table>
