--- a/src/app/features/admin/cqc-main-service-change/cqc-individual-main-service-change/cqc-individual-main-service-change.component.html
+++ b/src/app/features/admin/cqc-main-service-change/cqc-individual-main-service-change/cqc-individual-main-service-change.component.html
@@ -2,7 +2,6 @@
   <div class="govuk-grid-column-three-quarters">
     <h2 class="govuk-heading-l">CQC main service change: Dummy Establishment</h2>
     <p>Receveived some date</p>
-    <<<<<<< HEAD
     <!-- <app-review-checkbox
       [toggleCheckbox]=""
       [registration]=""
@@ -10,16 +9,17 @@
       [checkBoxError]=""
       [getUpdatedRegistration]=""
     ></app-review-checkbox> -->
-    ======= >>>>>>> test
     <h2 class="govuk-heading-m">Workplace details</h2>
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Workplace ID</dt>
-        <dl class="govuk-summary-list__value"></dl>
+        <dl class="govuk-summary-list__value">{{ individualApproval.Establishment.nmdsId }}</dl>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Name and address</dt>
-        <dl class="govuk-summary-list__value"></dl>
+        <dl class="govuk-summary-list__value">
+          {{ individualApproval.Establishment.NameValue }}
+        </dl>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Username</dt>
@@ -35,7 +35,6 @@
       </div>
     </dl>
 
-    <<<<<<< HEAD
     <!-- <app-add-note
       [addNote]=""
       [registration]=""
@@ -46,7 +45,6 @@
       [loggedInUser]=""
     ></app-add-note> -->
 
-    ======= >>>>>>> test
     <div class="govuk-frid-column-three-quarters">
       <div class="govuk-button-group">
         <button
