Update back link and cancel button for subs

--- a/src/app/features/workplace/change-expires-soon-alerts/change-expires-soon-alerts.component.html
+++ b/src/app/features/workplace/change-expires-soon-alerts/change-expires-soon-alerts.component.html
@@ -58,8 +58,8 @@
         <a
           role="button"
           class="govuk-button govuk-button--link govuk-!-margin-left-9"
-          [routerLink]="['/dashboard']"
-          [fragment]="'training-and-qualifications'"
+          [routerLink]="returnUrl.url"
+          [fragment]="returnUrl.fragment"
           >Cancel</a
         >
       </div>
