Add canEdit worker permisson for this change expire soon alert link

--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -6,7 +6,7 @@
       >Manage mandatory training
     </a>
   </div>
-  <div *ngIf="canEditEstablishment" class="govuk-grid-column-one-third">
+  <div *ngIf="canEditWorker" class="govuk-grid-column-one-third">
     <a
       class="govuk-list govuk-list--inline govuk-!-margin-right-5"
       [routerLink]="['/workplace', workplace.uid, 'change-expires-soon-alerts']"
