Add expiresSoonAlertDate as input to training component

--- a/src/app/features/workers/training-qualifications-record/training-and-qualifications-record.component.html
+++ b/src/app/features/workers/training-qualifications-record/training-and-qualifications-record.component.html
@@ -74,6 +74,7 @@
       <app-training
         [workplace]="workplace"
         [worker]="worker"
+        [expiresSoonAlertDate]="expiresSoonAlertDate"
         (trainingChanged)="trainingAndQualificationsChangedHandler($event)"
       ></app-training>
     </app-tab>
