Add styling for targeted emails in admin dashboard

--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
@@ -1,42 +1,24 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <dl class="govuk-list--definition">
-      <dt>Total number of users to be emailed</dt>
+  <!--
+  <div class="govuk-grid-row">
+    <div class="govuk-form-group govuk-!-margin-top-3"> -->
+
+  <!-- </div>
+      </div> -->
+  <div class="govuk-grid-column-one-third">
+    <p class="asc-summary-box govuk-!-margin-bottom-8">
+      <span>Number of users to email:</span>
+      <br />
+      <strong>
+        {{ totalEmails | number }}
+      </strong>
+    </p>
+    <!-- <dl class="govuk-list--definition">
       <dd data-testid="totalEmails">
         {{ totalEmails | number }}
       </dd>
-    </dl>
-    <div class="govuk-grid-row">
-      <div class="govuk-form-group govuk-!-margin-top-3">
-        <div class="govuk-grid-column-one-half">
-          <label class="govuk-label" for="emailGroup"> Email group </label>
-          <select
-            [(ngModel)]="emailGroup"
-            class="govuk-select govuk-!-width-full"
-            id="emailGroup"
-            data-testid="emailGroup"
-            (change)="updateTotalEmails($event.target.value)"
-          >
-            <option value="">Select a user group</option>
-            <option value="primaryUsers">Primary users</option>
-            <option value="parentOnly">Parent only</option>
-            <option value="singleAccountsOnly">Single accounts only</option>
-          </select>
-        </div>
-        <div class="govuk-grid-column-one-half">
-          <label class="govuk-label" for="selectedTemplateId"> Template ID </label>
-          <select
-            [(ngModel)]="selectedTemplateId"
-            class="govuk-select govuk-!-width-full"
-            id="selectedTemplateId"
-            data-testid="selectedTemplateId"
-          >
-            <option value="">Select a template</option>
-            <option *ngFor="let template of templates" [value]="template.id">{{ template.name }}</option>
-          </select>
-        </div>
-      </div>
-    </div>
+      <dt>Number of users to email:</dt>
+    </dl> -->
 
     <button
       class="govuk-button"
@@ -44,7 +26,34 @@
       (click)="confirmSendEmails($event, totalEmails, emailType.TargetedEmails)"
       type="submit"
     >
-      Send emails to selected group
+      Send X targeted emails
     </button>
+  </div>
+  <div class="govuk-grid-column-one-third">
+    <label class="govuk-label" for="emailGroup"> Email group </label>
+    <select
+      [(ngModel)]="emailGroup"
+      class="govuk-select govuk-!-width-full govuk-!-margin-bottom-7"
+      id="emailGroup"
+      data-testid="emailGroup"
+      (change)="updateTotalEmails($event.target.value)"
+    >
+      <option value="">Select a user group</option>
+      <option value="primaryUsers">Primary users</option>
+      <option value="parentOnly">Parent only</option>
+      <option value="singleAccountsOnly">Single accounts only</option>
+    </select>
+    <!-- </div>
+      <div class="govuk-grid-column-one-half"> -->
+    <label class="govuk-label" for="selectedTemplateId"> Template</label>
+    <select
+      [(ngModel)]="selectedTemplateId"
+      class="govuk-select govuk-!-width-full"
+      id="selectedTemplateId"
+      data-testid="selectedTemplateId"
+    >
+      <option value="">Select a template</option>
+      <option *ngFor="let template of templates" [value]="template.id">{{ template.name }}</option>
+    </select>
   </div>
 </div>
