Refactor the targeted emails component

--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
@@ -39,7 +39,7 @@
     <button
       class="govuk-button"
       [disabled]="emailGroup === '' || selectedTemplateId === ''"
-      (click)="confirmSendEmails($event, totalEmails, emailType.TargetedEmails)"
+      (click)="confirmSendEmails($event, totalEmails)"
       type="submit"
     >
       Send
